lab1/max_service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: ClusterIP      # тип доступу до сервісу, ClusterIp - значення за замовчуванням і може бути пропущене
  ports:
    - port: 80         # порт по якому можна звератись до сервісу
      targetPort: 8081 # порт контейнера
  selector:
    app: node-app     # селектор, всі Pod з даним селектором, будуть підключені до даного сервісу
